// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Summary with multiple expenses 1`] = `
<div>
  <h3>
    Viewing 
    3
     expenses totalling 
    £27.03
    .
  </h3>
</div>
`;

exports[`renders Summary with one expense 1`] = `
<div>
  <h3>
    Viewing 
    1
     expenses totalling 
    £5.99
    .
  </h3>
</div>
`;
